--- a/app/views/pages/checklist.html.erb
+++ b/app/views/pages/checklist.html.erb
@@ -9,6 +9,7 @@
 <%= csrf_meta_tags %>
 </head>
 <body>
+
   <div class="border-top"></div>
   <div class="content">
 
@@ -30,25 +31,23 @@
     
     <div class="second-line">
       <div class="logo-background">
-      <figure>
-        <%= image_tag "smashbot-logo.png", :class => "logo-icon" %>
-      </figure>
+        <figure>
+          <%= image_tag "smashbot-logo.png", :class => "logo-icon" %>
+        </figure>
       </div>
       <section>
         <h2 class="title">How to become a design apprentice</h2>
         <h3 class="subtitle">Checklist for future apprentices</h3>
-        <h6 class="blogger-name italics"><a>ed wassermann</a></h6>
+				<h6 class="blogger-name italics"><%= link_to 'ed wassermann', 
+					'https://twitter.com/visavis_kid', target: '_blank' %>
+				</h6>
       </section>
     </div>
     
-      <div class="third-line">
-        <h5 class="date">06/27/2013</h5>
-        <article>
-          <p class="blog-text"><span class="capital_letter">A</span>pplying for the <span class="italics"><a>design apprenticeship</a></span> was certainly the best decision for becoming a better craftsman. The high value <span class="italics">smashbot</span> puts into learning and educating each other creates an excellent environment for expanding your
-          knowledge and to professionalize your skills. 
-          </p>
-        </article>
-      </div>
+    <div class="third-line">
+		  <%= render 'shared/checklist/blog_text' %>
+    </div>
+
     <div class="homer-background">
       <figure>
         <%= image_tag "Homer-complex-car.jpg", :class => "homer-picture" %>
@@ -57,175 +56,17 @@
 
 
     <div class="fourth-block">
-      <section>
-      <ul>
-
-      <div class="list_item_wrapper"> 
-          <div class="checklist_ordinal_wrapper">
-            <aside>
-              <li class="ordinal"><span class="big_ordinal_digit">1</span>irst</li>
-            </aside>
-          </div>
-        <div class="checklist_text_row_wrapper">
-          <article>
-            <li class="text_row"><%= image_tag "red-line.jpg", :class => "red-line" %>Hop on the <strong><%= link_to "trail map", "http://learn.thoughtbot.com/trails", :target => "_blank" %></strong></li>
-          </article>
-        </div>
-      </div>
-
-      <div class="list_item_wrapper">
-        <div class="checklist_ordinal_wrapper">
-          <aside>
-            <li class="ordinal"><span class="big_ordinal_digit">2</span>econd</li>
-          </aside>
-        </div>
-        <div class="checklist_text_row_wrapper">
-          <article>
-            <li class="text_row"><%= image_tag "red-line.jpg", :class => "red-line" %>Get dangerous at <strong><%= link_to "typography", "http://learn.thoughtbot.com/typography/", :target => "_blank" %></a></strong></li>
-          </article>
-        </div>
-      </div>
-
-      <div class="list_item_wrapper">
-        <div class="checklist_ordinal_wrapper">
-          <aside>
-            <li class="ordinal"><span class="big_ordinal_digit">3</span>hird</li>
-          </aside>
-        </div>
-        <div class="checklist_text_row_wrapper">
-          <article>
-            <li class="text_row"><%= image_tag "red-line.jpg", :class => "red-line" %>Catch yourself ranting about bad typefaces in a restaurant</li>
-          </article>
-        </div>
-      </div>
-
-      <div class="list_item_wrapper">
-        <div class="checklist_ordinal_wrapper">
-          <aside>
-            <li class="ordinal"><span class="big_ordinal_digit">4</span>ourth</li>
-          </aside>
-        </div>
-        <div class="checklist_text_row_wrapper">
-          <article>
-            <li class="text_row"><%= image_tag "red-line.jpg", :class => "red-line" %>Know thy <strong><%= link_to "grids", "http://learn.thoughtbot.com/grids/", :target => "_blank" %></strong></li>
-          </article>
-        </div>
-      </div>
-
-      <div class="list_item_wrapper">
-        <div class="checklist_ordinal_wrapper">
-          <aside>
-            <li class="ordinal"><span class="big_ordinal_digit">5</span>ifth</li>
-          </aside>
-        </div>
-        <div class="checklist_text_row_wrapper">
-          <article>
-            <li class="text_row"><%= image_tag "red-line.jpg", :class => "red-line" %>Know thy <strong><%= link_to "color wheel", "http://learn.thoughtbot.com/design/", :target => "_blank" %></a></strong></li>
-          </article>
-        </div>
-      </div>
-
-      <div class="list_item_wrapper">
-        <div class="checklist_ordinal_wrapper">
-          <aside>
-            <li class="ordinal"><span class="big_ordinal_digit">6</span>ixth</li>
-          </aside>
-        </div>
-        <div class="checklist_text_row_wrapper">
-          <article>
-            <li class="text_row"><%= image_tag "red-line.jpg", :class => "red-line" %>Annoy friends and family with <strong><%= link_to "design principles", "http://learn.thoughtbot.com/visual-principles", :target => "_blank" %></strong></li>
-          </article>
-        </div>
-      </div>
-
-      <div class="list_item_wrapper">
-        <div class="checklist_ordinal_wrapper">
-          <aside>
-            <li class="ordinal"><span class="big_ordinal_digit">7</span>eventh</li>
-          </aside>
-        </div>
-        <div class="checklist_text_row_wrapper">
-          <article>
-            <li class="text_row"><%= image_tag "red-line.jpg", :class => "red-line" %>Start using <strong><%= link_to "Bourbon", "http://bourbon.io/", :target => "_blank" %> & <%= link_to "Neat", "http://neat.bourbon.io/", :target => "_blank" %></strong></li>
-          </article>
-        </div>
-      </div>
-
-      <div class="list_item_wrapper">
-        <div class="checklist_ordinal_wrapper">
-          <aside>
-            <li class="ordinal"><span class="big_ordinal_digit">8</span>igth</li>
-          </aside>
-        </div>
-        <div class="checklist_text_row_wrapper">
-          <article>
-            <li class="text_row"><%= image_tag "red-line.jpg", :class => "red-line" %>Get offended by unsemantic <strong><%= link_to "HTML", "http://nicolasgallagher.com/about-html-semantics-front-end-architecture/", :target => "_blank" %> / <%= link_to "CSS", "http://ianstormtaylor.com/oocss-plus-sass-is-the-best-way-to-css/", :target => "_blank" %></strong></li>
-          </article>
-        </div>
-      </div>
-
-      <div class="list_item_wrapper">
-        <div class="checklist_ordinal_wrapper">
-          <aside>
-            <li class="ordinal"><span class="big_ordinal_digit">9</span>inth</li>
-          </aside>
-        </div>
-        <div class="checklist_text_row_wrapper">
-          <article>
-            <li class="text_row"><%= image_tag "red-line.jpg", :class => "red-line" %>Design a <strong><a>pet project</a> </strong>and ask for feedback</li>
-          </article>
-        </div>
-      </div>
-
-      <div class="list_item_wrapper">
-        <div class="checklist_ordinal_wrapper">
-          <aside>
-            <li class="ordinal"><span class="big_ordinal_digit">10</span>enth</li>
-          </aside>
-        </div>
-        <div class="checklist_text_row_wrapper">
-          <article>
-            <li class="text_row"><%= image_tag "red-line.jpg", :class => "red-line" %>Get more access to the <strong><%= link_to "Team", "http://www.thoughtbot.com/about/", :target => "_blank" %></strong> through <strong><%= link_to "PRIME", "http://learn.thoughtbot.com/prime/", :target => "_blank" %></strong></li>
-          </article>
-        </div>
-      </div>
-
-      <div class="list_item_wrapper">
-        <div class="checklist_ordinal_wrapper">
-          <aside>
-            <li class="ordinal"><span class="big_ordinal_digit">11</span>leventh</li>
-          </aside>
-        </div>
-        <div class="checklist_text_row_wrapper">
-          <article>
-            <li class="text_row"><%= image_tag "red-line.jpg", :class => "red-line" %>Do the online / offline <strong><%= link_to "“Design for Developers”", "https://learn.thoughtbot.com/workshops/19-design-for-developers/", :target => "_blank" %> </strong>workshop</li>
-          </article>
-        </div>
-      </div>
-
-      <div class="list_item_wrapper">
-        <div class="checklist_ordinal_wrapper">
-          <aside>
-            <li class="ordinal"><span class="big_ordinal_digit">12</span>welfth</li>
-          </aside>
-        </div>
-        <div class="checklist_text_row_wrapper">
-          <article>
-            <li class="text_row"><%= image_tag "red-line.jpg", :class => "red-line" %><strong>Enjoy the process!</strong></li>
-          </article>
-        </div>
-      </div>
-      
-      </ul>
-      </section>
+			<%= render "shared/checklist/tips_list" %>
     </div>
 
       <%= yield %>
 
-    </div>
+  </div>
+
     <div class="border-bottom">
       <div class="copyright"><p>© 2013 smashbot, inc. The design of a robot and smashbot are registered trademarks of smashbot, inc.</p> 
       </div>
     </div>
+		
 </body>
 </html>
