--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
   <title>Portfolio</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
+	<link rel="stylesheet" href="http://basehold.it/30">
   <%= csrf_meta_tags %>
 </head>
 
@@ -11,3 +12,5 @@
 
 </body>
 </html>
+
+
